--- a/app/views/polls/show.html.erb
+++ b/app/views/polls/show.html.erb
@@ -1,16 +1,18 @@
 <h1><%= @poll.question %> </h1>
 
-<p>Ones: <%= @poll.ones %></p>
-<p>Twos: <%= @poll.twos %></p>
-<p>Threes: <%= @poll.threes %></p>
-<p>Fours: <%= @poll.fours %></p>
-<p>Fives: <%= @poll.fives %></p>
+<p class="badge bg-danger">Ones: <%= @poll.ones %></p>
+<p class="badge bg-warning">Twos: <%= @poll.twos %></p>
+<p class="badge bg-secondary">Threes: <%= @poll.threes %></p>
+<p class="badge bg-info">Fours: <%= @poll.fours %></p>
+<p class="badge bg-success">Fives: <%= @poll.fives %></p>
 
 
 <h2> Vote </h2>
 
-<%= link_to "1", "/polls/#{@poll.id}/?value=1", method: "update" %>
-<%= link_to "2", "/polls/#{@poll.id}/?value=2", method: "update" %>
-<%= link_to "3", "/polls/#{@poll.id}/?value=3", method: "update" %>
-<%= link_to "4", "/polls/#{@poll.id}/?value=4", method: "update" %>
-<%= link_to "5", "/polls/#{@poll.id}/?value=5", method: "update" %>
+<div class="btn-group" role="group" aria-label="Basic example">
+  <%= link_to "1", "/polls/#{@poll.id}/?value=1", method: "update", class: "btn btn-outline-secondary" %>
+  <%= link_to "2", "/polls/#{@poll.id}/?value=2", method: "update", class: "btn btn-outline-secondary"%>
+  <%= link_to "3", "/polls/#{@poll.id}/?value=3", method: "update", class: "btn btn-outline-secondary"%>
+  <%= link_to "4", "/polls/#{@poll.id}/?value=4", method: "update", class: "btn btn-outline-secondary"%>
+  <%= link_to "5", "/polls/#{@poll.id}/?value=5", method: "update", class: "btn btn-outline-secondary"%>
+</div>
