--- a/app/views/polls/new.html.erb
+++ b/app/views/polls/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_with url: "/polls", method: :post, local: true do |form| %>
-  <%= form.label :question %>
+  <%= form.label :question, class: 'form-label' %>
   <%= form.text_field :question %>
-  <%= form.submit 'Create Poll' %>
+  <%= form.submit 'Create Poll', class: 'btn btn-outline-primary' %>
 <% end %>
 
 
